[package]
name = "affectively-image-utils"
version = "1.0.0"
authors = ["AFFECTIVELY <opensource@affectively.ai>"]
edition = "2021"
license = "MIT"
description = "High-performance image utilities for WebAssembly - Base64, validation, format detection"
repository = "https://github.com/affectively-ai/wasm-image-utils"
keywords = ["wasm", "image", "base64", "validation"]
categories = ["multimedia::images", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.22"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
